NEXT-21760 - Add E2E tests for bulk edit documents

--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-order/sw-bulk-edit-order-documents-download-documents/sw-bulk-edit-order-documents-download-documents.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-order/sw-bulk-edit-order-documents-download-documents/sw-bulk-edit-order-documents-download-documents.html.twig
@@ -10,6 +10,7 @@
         v-model="documentType.selected"
         :label="documentType.translated.name"
         class="sw-bulk-edit-order-documents-download-documents__checkbox"
+        :class="`is--${documentType.technicalName}`"
     />
     {% endblock %}
 </div>
