--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-process/sw-bulk-edit-save-modal-process.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-process/sw-bulk-edit-save-modal-process.html.twig
@@ -24,6 +24,7 @@
             v-for="selectedDocumentType in selectedDocumentTypes"
             :key="selectedDocumentType.id"
             class="sw-bulk-edit-save-modal-process__generate-document"
+            :class="`is--${selectedDocumentType.technicalName}`"
         >
             <div class="progress">
                 <div class="progress__label">
