--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-sidebar/sw-settings-country-sidebar.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-sidebar/sw-settings-country-sidebar.scss
@@ -1,6 +1,12 @@
 @import "~scss/variables";
 
 .sw-settings-country-sidebar {
+    &.is--disabled {
+        cursor: not-allowed;
+        pointer-events: none;
+        opacity: 0.5;
+    }
+
     &__variable-item {
         display: flex;
         font-size: $font-size-small;
