--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.scss
@@ -1,6 +1,18 @@
 @import "~scss/variables";
 
 .sw-settings-country-address-handling {
+    &__options-container > div:first-child {
+        margin-top: 0;
+    }
+
+    &__options-container > div:last-child {
+        margin-bottom: 0;
+    }
+
+    &__option-items.sw-field--switch {
+        margin: 12px 0;
+    }
+
     &__text-field {
         border-radius: 4px;
         border: 1px solid $color-gray-300;
@@ -18,6 +30,7 @@
     }
 
     .advanced-postal-code {
+        margin: 12px 0;
         position: relative;
 
         .sw-field--switch {
