--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -225,6 +225,7 @@
     {% block sw_settings_country_detail_sidebar %}
     <template #sidebar>
         <sw-settings-country-sidebar
+            :disabled="!showSidebar"
             :is-loading="isLoading"
             @open-preview-modal="openPreviewModal"
         />
