--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-link-menu/sw-text-editor-link-menu.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-link-menu/sw-text-editor-link-menu.html.twig
@@ -101,6 +101,17 @@
             no-margin-top
         />
         {% endblock %}
+
+        {% block sw_text_editor_toolbar_button_link_menu_content_type_button_type %}
+        <sw-select-field
+            v-if="displayAsButton"
+            v-model="buttonVariant"
+            class="sw-text-editor-link-menu__button-variant"
+            :label="$tc('sw-text-editor-toolbar.link.buttonVariant')"
+            :options="buttonVariantList"
+            require
+        />
+        {% endblock %}
     </div>
     {% endblock %}
 
