--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-select-result/sw-select-result.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-select-result/sw-select-result.scss
@@ -13,6 +13,7 @@ $sw-select-result-disabled-color-text: darken($color-gray-300, 15%);
     cursor: pointer;
     display: grid;
     grid-template-columns: auto auto 1fr auto;
+    align-items: center;
     border-radius: 4px;
 
     .sw-select-result__result-item-preview {
