--- a/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-multi-select/sw-entity-multi-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-multi-select/sw-entity-multi-select.html.twig
@@ -110,6 +110,22 @@
                         :description-position="descriptionPosition"
                         @item-select="addItem"
                     >
+                        {% block sw_entity_multi_select_base_results_list_result_preview %}
+                        <template #preview>
+                            <slot
+                                name="result-label-preview"
+                                v-bind="{
+                                    item,
+                                    index,
+                                    labelProperty,
+                                    valueProperty: 'id',
+                                    searchTerm,
+                                    highlightSearchTerm,
+                                    getKey
+                                }"
+                            ></slot>
+                        </template>
+                        {% endblock %}
                         {% block sw_entity_multi_select_base_results_list_result_label %}
                         <slot
                             name="result-label-property"
