NEXT-21327 - Change assignment filtering of tag administration

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-tag/component/sw-settings-tag-detail-assignments/sw-settings-tag-detail-assignments.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-tag/component/sw-settings-tag-detail-assignments/sw-settings-tag-detail-assignments.html.twig
@@ -62,6 +62,7 @@
                             <sw-button
                                 class="associations-grid__row"
                                 :class="{ 'is--selected': item.entity === selectedEntity }"
+                                :disabled="isLoading"
                                 @click.prevent="onAssignmentChange(item)"
                             >
                                 <sw-icon
