--- a/src/Administration/Resources/app/administration/src/module/sw-settings-tag/page/sw-settings-tag-list/sw-settings-tag-list.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-tag/page/sw-settings-tag-list/sw-settings-tag-list.scss
@@ -19,7 +19,7 @@
             margin-bottom: 20px;
         }
 
-        .sw-single-select {
+        .sw-multi-select {
             padding: 0 16px;
             margin: 20px 0;
         }
