--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-dynamic-url-field/sw-dynamic-url-field.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-dynamic-url-field/sw-dynamic-url-field.html.twig
@@ -61,6 +61,7 @@
         <sw-entity-single-select
             v-else-if="linkCategory === 'detail'"
             v-model="linkTarget"
+            should-show-active-state
             entity="product"
             :criteria="entityFilter"
             :label="$tc('sw-text-editor-toolbar.link.linkTo')"
