--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-select-result/sw-select-result.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-select-result/sw-select-result.html.twig
@@ -6,6 +6,13 @@
     @mouseenter="onMouseEnter"
     @click.stop="onClickResult"
 >
+
+    {% block sw_select_result_item_preview %}
+    <span class="sw-select-result__result-item-preview">
+        <slot name="preview"></slot>
+    </span>
+    {% endblock %}
+
     {% block sw_select_result_item_text_holder %}
     <span class="sw-select-result__result-item-text">
         {% block sw_select_result_item_text %}
