--- a/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-single-select/sw-entity-single-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-single-select/sw-entity-single-select.html.twig
@@ -120,6 +120,22 @@
                         v-bind="{ item, index }"
                         @item-select="setValue"
                     >
+                        {% block sw_entity_multi_select_base_results_list_result_preview %}
+                        <template
+                            v-if="shouldShowActiveState"
+                            #preview
+                        >
+                            {% block sw_entity_multi_select_base_results_list_result_active %}
+                            <sw-icon
+                                class="sw-entity-single-select__selection-active"
+                                size="6"
+                                :color="getActiveIconColor(item)"
+                                name="default-basic-shape-circle-filled"
+                            />
+                            {% endblock %}
+                        </template>
+                        {% endblock %}
+
                         {% block sw_entity_single_select_base_results_list_result_label %}
                         <slot
                             name="result-label-property"
