--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-link-menu/sw-text-editor-link-menu.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-link-menu/sw-text-editor-link-menu.html.twig
@@ -4,7 +4,7 @@
     <div class="sw-text-editor-toolbar-button__link-menu-content">
         {% block sw_text_editor_toolbar_button_link_menu_content_type %}
         <sw-select-field
-            v-model="linkCategory"
+            :value="linkCategory"
             :label="$tc('sw-text-editor-toolbar.link.labelType')"
             require
             @change="onSelectFieldChange"
@@ -16,7 +16,7 @@
             <option value="detail">
                 {{ $tc('sw-text-editor-toolbar.link.labelProduct') }}
             </option>
-            <option value="category">
+            <option value="navigation">
                 {{ $tc('sw-text-editor-toolbar.link.labelCategory') }}
             </option>
             <option value="email">
@@ -62,6 +62,7 @@
             v-else-if="linkCategory === 'detail'"
             v-model="linkTarget"
             entity="product"
+            should-show-active-state
             :criteria="entityFilter"
             :label="$tc('sw-text-editor-toolbar.link.linkTo')"
             :placeholder="$tc('sw-text-editor-toolbar.link.placeholderProduct')"
@@ -71,7 +72,7 @@
 
         {% block sw_text_editor_toolbar_button_link_menu_content_type_inputs_category %}
         <sw-category-tree-field
-            v-else-if="linkCategory === 'category'"
+            v-else-if="linkCategory === 'navigation'"
             :label="$tc('sw-text-editor-toolbar.link.linkTo')"
             :criteria="entityFilter"
             :placeholder="$tc('sw-text-editor-toolbar.link.placeholderCategory')"
